--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   max-width: 1080px;
   margin: 0 auto;
   padding: 0px 64px 0px 64px;
-  font-family: 'Open Sans';
+  font-family: 'Roboto';
   display: flex;
   flex-direction: column;
   min-height: 100vh;
