[PW-17] Adjust bullet point background-color

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -120,7 +120,7 @@
     position: absolute;
     height: .5rem;
     width: .5rem;
-    background-color: $color-text-primary;
+    background-color: $color-text-secondary;
     margin-left: -2.75rem;
     margin-top: -4.25rem;
     border-radius: 50%;
