--- a/src/App.scss
+++ b/src/App.scss
@@ -8,12 +8,11 @@
   min-height: 100vh;
 }
 
-.Header, .Footer{
+.Header, .Footer {
   display: flex;
 }
 
-.Container
-{
+.Container {
   display: flex;
   flex-grow: 1;
 }
