[PW-2] Populate Sophos component

--- a/src/components/ExperienceSection.scss
+++ b/src/components/ExperienceSection.scss
@@ -12,6 +12,13 @@
     color: $color-accent;
 }
 
+.ExperienceSectionSubTitle
+{
+    font-family: $font-secondary;
+    font-size: 1rem;
+    color: $color-text-primary;
+}
+
 .ExperienceSectionBody {
     padding: 2rem 3rem 2rem 3rem;
     font-size: 1rem;
