--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -23,7 +23,7 @@
 .PrefaceProfile img
 {
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 1rem;
     height: 16rem;
     width: 16rem;
 }
