--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -16,7 +16,8 @@
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    vertical-align: top;
+    // justify-content: center;
     padding: 0rem 3rem 0rem 0rem;
 }
 
