--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -8,7 +8,7 @@
     margin: 64px 0px 64px 0px;
 }
 
-.Personal {
+.About .Personal {
     display: flex;
     flex-direction: column;
     vertical-align: top;
