--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -5,14 +5,14 @@
 .About {
     display: flex;
     flex-direction: row;
-    margin: 64px 0px 64px 0px;
+    margin: 4rem 0 4rem 0;
 }
 
 .About .Personal {
     display: flex;
     flex-direction: column;
     vertical-align: top;
-    padding: 0rem 3rem 0rem 0rem;
+    padding: 0 3rem 0 0;
 }
 
 .Personal img {
@@ -70,28 +70,24 @@
     margin-left: 2rem;
 }
 
-@media only screen and (min-width: $breakpoint-m) {
-    .Column {
-        flex: 1;
-    }
-
-    .DoubleColumn {
-        flex: 2;
-    }
-}
-
 @media only screen and (max-width: $breakpoint-m) {
-    .Personal {
-        max-width: 100vw;
-        max-height: 100vw;
+    .About {
+        margin: 0 0 0 0;
+    }
+
+    .About .Personal {
+        width: calc(100vw - 3rem);
+        height: calc(100vw - 3rem);
+        padding: 0 0 0 0;
+        margin: 0 0 2rem 0;
+    }
+
+    .About .Personal img {
         width: 100%;
+        height: 100%;
     }
 
-    .Personal img {
-        margin-top: -25%;
-    }
-
-    .AboutContainer {
-        padding-left: 0px;
+    .About {
+        flex-direction: column;
     }
 }
