--- a/src/components/Social.scss
+++ b/src/components/Social.scss
@@ -2,7 +2,7 @@
 
 .SocialIcon {
     display: inline-block;
-    margin: 0px 32px 0px 0px;
+    margin: 0 2rem 0 0;
 }
 
 @media only screen and (max-width: $breakpoint-m) {
@@ -11,6 +11,6 @@
     }
 
     .SocialWrapper {
-        margin: 0px 0px 64px 0px;
+        margin: 0 0 1rem 0;
     }
 }
