--- a/src/components/ExperienceSection.scss
+++ b/src/components/ExperienceSection.scss
@@ -29,4 +29,10 @@
     .ExperienceSectionBody {
         padding: 2rem 0px 2rem 0px;
     }
+
+    .ExperienceSectionBody img {
+        padding-left: 0;
+        padding-top: 2rem;
+        width: 100%;
+    }
 }
