--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import 'components/Colors.scss';
 @import 'components/Width.scss';
 
 .App {
@@ -23,4 +24,8 @@
   .App {
     padding: 0 1rem 0 1rem;
   }
+}
+
+.Highlight {
+  background-color: $color-highlight;
 }
