[PW-20] Implement a.Highlight CSS in .js

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -31,7 +31,8 @@
     padding: 0rem 0rem 2rem 0rem;
 }
 
-.PrefaceText > span
+.PrefaceText > span,
+.PrefaceText > a
 {
     font-family: $font-secondary;
     font-size: 3rem;
