--- a/src/components/ExperienceSection.scss
+++ b/src/components/ExperienceSection.scss
@@ -30,9 +30,9 @@
         padding: 2rem 0px 2rem 0px;
     }
 
-    .ExperienceSectionBody img {
+    img.ExperienceSectionBody {
         padding-left: 0;
-        padding-top: 2rem;
+        padding-top: 0;
         width: 100%;
     }
 }
