[PW-48] Refactor various components. Add colored Experience component card

--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -15,7 +15,7 @@
     padding: 0 3rem 0 0;
 }
 
-.Personal img {
+.About .Personal img {
     object-fit: cover;
     border-radius: 1rem;
     height: 16rem;
