--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -7,6 +7,12 @@
     justify-content: space-between;
 }
 
+.HeaderLeft {
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+}
+
 .HeaderNavLink {
     font-size: 0.75rem;
     line-height: 50px;
@@ -14,7 +20,7 @@
 }
 
 .HeaderLeft .HeaderNavLink {
-    margin: 0 16px 0 0;
+    margin: 0 0 0 1rem;
 }
 
 .HeaderNavLink:hover {
