[PW-42] Update existing color var use

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    color: $color-light-primary;
 }
 
 .Header,
@@ -29,23 +30,23 @@
 }
 
 .Highlight {
-    background-color: $color-highlight;
+    background-color: $color-light-highlight;
 }
 
 a.Highlight {
     text-decoration: none;
-    border-bottom: 0.2rem solid $color-text-primary;
-    background-color: rgba($color-accent, 0.2);
+    border-bottom: 0.2rem solid $color-light-primary;
+    background-color: rgba($color-light-accent, 0.2);
 }
 
 a.Highlight:hover,
 a.Highlight:visited,
 a.Highlight:link,
 a.Highlight:active {
-    color: $color-text-primary;
+    color: $color-light-primary;
 }
 
 a.Highlight:hover {
-    border-bottom: 0.2rem solid $color-accent;
+    border-bottom: 0.2rem solid $color-light-accent;
     cursor: pointer;
 }
