--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -25,7 +25,7 @@
 .AboutTitle {
     font-family: $font-secondary;
     font-size: 3rem;
-    color: $color-accent;
+    color: $color-light-accent;
 }
 
 .Description {
@@ -36,7 +36,7 @@
 .AboutSubTitle {
     font-family: $font-secondary;
     font-size: 2rem;
-    color: $color-accent;
+    color: $color-light-accent;
 }
 
 .SkillsType {
@@ -44,7 +44,7 @@
     display: block;
     font-family: $font-secondary;
     font-size: 1rem;
-    color: $color-text-primary;
+    color: $color-light-primary;
 }
 
 .Skill {
