--- a/src/components/ExperienceSection.scss
+++ b/src/components/ExperienceSection.scss
@@ -9,13 +9,13 @@
 .ExperienceSectionTitle {
     font-family: $font-secondary;
     font-size: 2rem;
-    color: $color-accent;
+    color: $color-light-accent;
 }
 
 .ExperienceSectionSubTitle {
     font-family: $font-secondary;
     font-size: 1rem;
-    color: $color-text-primary;
+    color: $color-light-primary;
 }
 
 .ExperienceSectionBody {
