[PW-42] Update ThemeToggle background-color

--- a/src/components/ThemeToggle.scss
+++ b/src/components/ThemeToggle.scss
@@ -4,7 +4,7 @@
     border-radius: 1rem;
     border: none;
     overflow: hidden;
-    background-color: #FFFFFF;
+    background-color: rgba(0, 0, 0, .1);
     transition: background-color 500ms linear;
 }
 
