--- a/src/components/ExperienceSection.scss
+++ b/src/components/ExperienceSection.scss
@@ -12,10 +12,18 @@
     color: $color-light-accent;
 }
 
+.Dark .ExperienceSectionTitle {
+    color: $color-dark-accent;
+}
+
 .ExperienceSectionSubTitle {
     font-family: $font-secondary;
     font-size: 1rem;
     color: $color-light-primary;
+}
+
+.Dark .ExperienceSectionSubTitle {
+    color: $color-dark-primary;
 }
 
 .ExperienceSectionBody {
