--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -18,15 +18,31 @@
     color: $color-light-primary;
 }
 
+.Dark .FooterLink {
+    color: $color-dark-primary;
+}
+
 .FooterLink:hover {
     color: $color-light-accent !important;
+}
+
+.Dark .FooterLink:hover {
+    color: $color-dark-accent !important;
 }
 
 .FooterLink:visited {
     color: $color-light-primary;
 }
 
+.Dark .FooterLink:visited {
+    color: $color-dark-primary;
+}
+
 .LastUpdated {
     font-size: 0.75rem;
     color: $color-light-secondary;
+}
+
+.Dark .LastUpdated {
+    color: $color-dark-secondary;
 }
