--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: $color-light-background;
+    transition: background-color 250ms linear;
 }
 
 .App.Dark {
