--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -67,7 +67,7 @@
     height: 2rem;
     line-height: 2rem;
     border-radius: 1rem;
-    background-color: rgba(#000, 0.1);
+    background-color: rgba($color-light-primary, 0.1);
     margin: 8px 8px 8px 0;
 }
 
@@ -99,4 +99,8 @@
         width: 100%;
         height: 100%;
     }
+}
+
+.Dark .Skill {
+    background-color: rgba($color-dark-primary, 0.1);
 }
