--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,7 @@ body {
 }
 
 @media only screen and (max-width: $breakpoint-m) {
-    .App {
+    .AppContainer {
         padding: 0 1rem 0 1rem;
     }
 }
