[PW-63] set background transition 0ms on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,6 +41,10 @@ body {
 }
 
 @media only screen and (max-width: $breakpoint-m) {
+    .App {
+        transition: background-color 0ms linear;
+    }
+
     .AppContainer {
         padding: 0 1rem 0 1rem;
     }
