--- a/src/App.scss
+++ b/src/App.scss
@@ -37,7 +37,7 @@ body {
 
 .Container {
     display: flex;
-    flex-grow: 1;
+    flex-direction: column;
 }
 
 @media only screen and (max-width: $breakpoint-m) {
