--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -82,7 +82,7 @@
     margin-left: 2rem;
 }
 
-@media only screen and (max-width: $breakpoint-m) {
+@media only screen and (max-width: $breakpoint-l) {
     .About {
         margin: 0 0 0 0;
         flex-direction: column;
