--- a/src/components/ExperienceCard.scss
+++ b/src/components/ExperienceCard.scss
@@ -80,7 +80,7 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: $breakpoint-m) {
+@media only screen and (max-width: $breakpoint-l) {
     .ExperienceCard {
         padding: 1rem;
     }
