--- a/src/components/ExperienceSection.scss
+++ b/src/components/ExperienceSection.scss
@@ -32,7 +32,7 @@
     line-height: 2rem;
 }
 
-@media only screen and (max-width: $breakpoint-m) {
+@media only screen and (max-width: $breakpoint-l) {
     .ExperienceSectionBody {
         padding: 2rem 0 2rem 0;
     }
