--- a/src/components/Social.scss
+++ b/src/components/Social.scss
@@ -6,7 +6,7 @@
     margin: 0 2rem 0 0;
 }
 
-@media only screen and (max-width: $breakpoint-m) {
+@media only screen and (max-width: $breakpoint-l) {
     .PrefaceBreak {
         display: none;
     }
