[PW-87] Rename Skills to Languages. Add new Tools sections. Update Skills

--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -47,6 +47,10 @@
     color: $color-dark-accent;
 }
 
+.SkillsContainer {
+    margin: 1rem 0 2rem 0;
+}
+
 .SkillsType {
     margin: 1rem 0 8px 0;
     display: block;
