--- a/src/components/cards/Card.scss
+++ b/src/components/cards/Card.scss
@@ -20,7 +20,7 @@
 .CardActionContainer {
     display: flex;
     flex-direction: column;
-    flex: 1 0 50%;
+    flex: 1 0 auto;
     align-items: flex-end;
     order: 2;
 }
