--- a/src/components/cards/Card.scss
+++ b/src/components/cards/Card.scss
@@ -67,7 +67,7 @@
 
 .CardAction {
     background-color: transparent;
-    border: 1px solid white;
+    border: 1px solid rgba(white, 0.5);
     border-radius: 1rem;
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
@@ -97,9 +97,22 @@
     }
 
     .CardActionContainer {
-        flex-direction: row;
         order: 4;
         margin-top: 1rem;
-        justify-content: space-between;
+        flex-flow: wrap;
+    }
+
+    .CardActionContainer > a,
+    .CardActionContainer > button {
+        width: calc(100% - .5rem);
+    }
+
+    .CardActionContainer > a > button {
+        width: 100%;
+    }
+
+    .CardActionContainer button {
+        height: 3rem;
+        border-radius: 1.5rem;
     }
 }
