[PW-76] Update Card button css

--- a/src/components/cards/Card.scss
+++ b/src/components/cards/Card.scss
@@ -67,19 +67,19 @@
 
 .CardAction {
     background-color: transparent;
-    border: 1px solid rgba(white, 0.5);
+    border: none;
     border-radius: 1rem;
-    padding: 0.5rem 1rem;
     font-size: 0.8rem;
     height: calc(1.8rem + 2px);
+    line-height: calc(1.8rem + 2px);
     width: 8rem;
     margin: 0.25rem;
     color: white;
+    text-align: center;
 }
 
 .CardAction:hover {
-    background-color: white;
-    border: 1px solid white;
+    background-color: rgba(0, 0, 0, .1);
     cursor: pointer;
 }
 
@@ -99,20 +99,14 @@
     .CardActionContainer {
         order: 4;
         margin-top: 1rem;
-        flex-flow: wrap;
+        display: flex;
+        flex-direction: row;
     }
 
-    .CardActionContainer button {
+    .CardAction {
         height: 3rem;
+        line-height: 3rem;
         border-radius: 1.5rem;
-    }
-
-    .CardActionContainer > a,
-    .CardActionContainer > button {
-        width: calc(100% - 0.5rem);
-    }
-
-    .CardActionContainer > a > button {
-        width: 100%;
+        flex: 1;
     }
 }
