[PW-76] Update Card button css

--- a/src/components/cards/Card.scss
+++ b/src/components/cards/Card.scss
@@ -71,7 +71,7 @@
     border-radius: 1rem;
     font-size: 0.8rem;
     height: calc(1.8rem + 2px);
-    line-height: calc(1.8rem + 2px);
+    line-height: 2rem;
     width: 8rem;
     margin: 0.25rem;
     color: white;
